# 2026-portfolio

./: .railwayignore  Makefile  RAILWAY_DEPLOYMENT.md  RAILWAY_QUICK_START.md  README.md  docker-compose.yml  nixpacks.toml  railway.json  setup.sh
backend/: .gitignore  CMakeLists.txt  Dockerfile  Makefile
backend/include/: api.h
backend/src/: api.cpp  main.cpp  server.cpp  server.h
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.api.json  tsconfig.json  vercel.json  vite.config.ts
frontend/api/: [...path].ts  seo-utils.js  ssr.ts
frontend/public/: robots.txt  sitemap.xml
frontend/src/: App.css  ThemeContext.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: ErrorBoundary.css  ErrorBoundary.tsx  LazyImage.css  LazyImage.tsx  PerformanceMetrics.tsx  SEO.tsx  SkeletonLoader.css  SkeletonLoader.tsx  ThemeToggle.css  ThemeToggle.tsx
frontend/src/routes/: 404.css  404.tsx  __root.tsx  blog.$postId.css  blog.$postId.tsx  blog.css  blog.tsx  index.css  index.tsx
frontend/src/stores/: menuStore.ts
frontend/src/utils/: api.ts  seo.ts
